@@ -2,68 +2,117 @@ package ru.feryafox.LZFamily.LZ77;
 
 import ru.feryafox.LZFamily.Base.*;
 
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.Queue;
-
+import java.util.*;
 
 public final class LZ77 implements LZBase {
 
     @FunctionalInterface
     private interface lzSteps {
-        void makeStep(ArrayList<LZCode> result, ArrayList<Character> dict, Queue<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur);
+        void makeStep(ArrayList<LZCode> result, ArrayList<Character> dict, ArrayList<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur);
     }
 
     @Override
     public LZResult code(String s, int dictSize, int bufferSize) {
-
         return lzSteps(s, dictSize, bufferSize, lz77StepCollection::lzStepWithoutOptimization);
     }
 
-
-    private LZResult lzSteps(String s, int dictSize, int bufferSize, lzSteps lzSteps_) {
+    public LZResult newCode(String s, int dictSize, int bufferSize) {
         ArrayList<LZCode> result = new ArrayList<>();
 
         ArrayList<Character> dict = new ArrayList<>();
-        Queue<Character> buffer = new ArrayDeque<>();
+        ArrayList<Character> buffer = new ArrayList<>();
 
+        int c = 0;
+        while (c < bufferSize && c < s.length()) {
+            buffer.add(s.charAt(c));
+            c++;
+        }
+
+        int ic = 0;
+        while (ic < dictSize) {
+            dict.add('\0');
+            ic++;
+        }
+
+        while (!buffer.isEmpty()) {
+            char cur = buffer.getFirst();
+            int startIndex = dict.indexOf(cur);
+
+            if (startIndex == -1) {
+                dict.add(buffer.removeFirst());
+                result.add(new LZ77Code(0, 0, cur));
+            }
+            else {
+                int maxLength = 0;
+                int maxLengthIndex = 0;
+                int curLength = 0;
+
+                for (int i = startIndex; i < dictSize; i++) {
+                    for (int j = 0; j < buffer.size() && i + j < dictSize; j++) {
+                        // вдруг кто-то это прочитает. Если ты вдруг спросишь, зачем эти странные переменные - отвечу: хрен его знает. Если просто в сравнение их запихнуть, то не всегда работает...
+                        char q = dict.get(i + j);
+                        char qq = buffer.get(j);
+                        if (q == qq) {
+                            curLength++;
+                            if (curLength > maxLength) {
+                                maxLength++;
+                                maxLengthIndex = i;
+
+                            }
+                        }
+                        else {
+                            break;
+                        }
+                    }
+                    curLength = 0;
+                }
+                if (maxLength == buffer.size()) {
+                    maxLength--;
+                }
+                for (int i = 0; i < maxLength + 1; i++) {
+                    dict.add(buffer.removeFirst());
+                }
+
+                result.add(new LZ77Code(maxLengthIndex, maxLength, dict.getLast()));
+            }
+
+            while (dict.size() > dictSize) {
+                dict.removeFirst();  // Удаляем первый элемент
+            }
+
+            while (buffer.size() < bufferSize && c < s.length()) {
+                buffer.add(s.charAt(c));
+                c++;
+            }
+        }
+
+        return new LZResult(new LZ77CodeInfo(dictSize, bufferSize), result);
+    }
+
+    private LZResult lzSteps(String s, int dictSize, int bufferSize, lzSteps lzSteps_) {
+        ArrayList<LZCode> result = new ArrayList<>();
+        ArrayList<Character> dict = new ArrayList<>();
+        ArrayList<Character> buffer = new ArrayList<>();
         ArrayList<Character> dictBuffer = new ArrayList<>();
-
-
-
-
 
         int c = fillDictAndBuffer(dict, buffer, dictSize, bufferSize, s);
 
         while (!buffer.isEmpty()) {
-
-            char cur = buffer.remove();
+            char cur = buffer.remove(0); 
             dictBuffer.add(cur);
-
 
             if (buffer.isEmpty() || !dict.contains(cur)) {
                 dict.add(cur);
                 result.add(new LZ77Code(0, 0, cur));
-            }
-            else {
+            } else {
                 if (result.size() % 10000 == 0) {
                     System.out.println(result.size());
                 }
-//                System.out.println("-".repeat(10));
-//                System.out.println("Start: ");
-//                System.out.println(result.size());
-//                System.out.println(dict);
-//                System.out.println(buffer);
                 lzSteps_.makeStep(result, dict, buffer, dictBuffer, dictSize, bufferSize, cur);
-//                System.out.println("-".repeat(10));
-//                System.out.println("End:");
-//                System.out.println(dict);
-//                System.out.println(buffer);
             }
 
             while (dict.size() > dictSize) {
-                dict.removeFirst();
+                dict.remove(0);
             }
 
             while (buffer.size() < bufferSize && c < s.length()) {
@@ -86,8 +135,7 @@ public final class LZ77 implements LZBase {
         return lzSteps(s, dictSize, bufferSize, lz77StepCollection::lzStepWithOptimization);
     }
 
-
-    private int fillDictAndBuffer(ArrayList<Character> dict, Queue<Character> buffer, int dictSize, int bufferSize, String s) {
+    private int fillDictAndBuffer(ArrayList<Character> dict, ArrayList<Character> buffer, int dictSize, int bufferSize, String s) {
         int c = 0;
         while (c < bufferSize && c < s.length()) {
             buffer.add(s.charAt(c));
@@ -106,9 +154,7 @@ public final class LZ77 implements LZBase {
     @Override
     public String decode(LZResult coded) {
         StringBuilder result = new StringBuilder();
-
-        int dictSize = ((LZ77CodeInfo)coded.codeInfo()).getDictSize();
-
+        int dictSize = ((LZ77CodeInfo) coded.codeInfo()).getDictSize();
         ArrayList<Character> dict = new ArrayList<>();
 
         int i = 0;
@@ -118,25 +164,21 @@ public final class LZ77 implements LZBase {
         }
 
         for (LZCode c : coded.code()) {
-
-
             LZ77Code code = (LZ77Code) c;
-            if ((code.getLength() == 0 && code.getOffset() == 0)) {
+            if (code.getLength() == 0 && code.getOffset() == 0) {
                 result.append(code.getDiscordLetter());
-            }
-            else {
-                for (int j = 0 ; j < code.getLength(); j++) {
+            } else {
+                for (int j = 0; j < code.getLength(); j++) {
                     char cur = dict.get(code.getOffset() + j);
                     result.append(cur);
                     dict.add(cur);
                 }
-
                 result.append(code.getDiscordLetter());
             }
 
             dict.add(code.getDiscordLetter());
             while (dict.size() > dictSize) {
-                dict.removeFirst();
+                dict.remove(0);  // Удаляем первый элемент
             }
         }
 
@@ -144,7 +186,7 @@ public final class LZ77 implements LZBase {
     }
 
     static class lz77StepCollection {
-        public static void lzStepWithoutOptimization(ArrayList<LZCode> result, ArrayList<Character> dict, Queue<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur) {
+        public static void lzStepWithoutOptimization(ArrayList<LZCode> result, ArrayList<Character> dict, ArrayList<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur) {
             int indexOfCur = dict.indexOf(cur);
 
             while (dictBuffer.size() < bufferSize - 1) {
@@ -153,148 +195,21 @@ public final class LZ77 implements LZBase {
                     break;
                 }
                 char q = dict.get(curIndex);
-                char qq = buffer.element();
+                char qq = buffer.get(0);  // Получаем первый элемент
                 if (q == qq) {
-                    dictBuffer.add(buffer.poll());
-                }
-                else {
+                    dictBuffer.add(buffer.remove(0));  // Удаляем первый элемент
+                } else {
                     break;
                 }
-
             }
 
-            dictBuffer.add(buffer.poll());
-
+            dictBuffer.add(buffer.remove(0));  // Удаляем первый элемент
             dict.addAll(dictBuffer);
-            result.add(new LZ77Code(indexOfCur, dictBuffer.size() - 1, dictBuffer.getLast()));
+            result.add(new LZ77Code(indexOfCur, dictBuffer.size() - 1, dictBuffer.get(dictBuffer.size() - 1)));
         }
 
-        public static void lzStepWithOptimization(ArrayList<LZCode> result, ArrayList<Character> dict, Queue<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur) {
-            int indexOfCur = dict.indexOf(cur);
-            int maxLength = 1;
-            int bestIndex = indexOfCur;
-            char r;
+        public static void lzStepWithOptimization(ArrayList<LZCode> result, ArrayList<Character> dict, ArrayList<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur) {
 
-            for (int i = indexOfCur; i < dictSize - 1; i++) {
-                if (cur == dict.get(i)) {
-
-                    Queue<Character> tempBuffer = new ArrayDeque<>(buffer);
-                    ArrayList<Character> dictBufferTemp = new ArrayList<>(dictBuffer);
-
-                    while (dictBufferTemp.size() < bufferSize - 1) {
-                        int curIndex = i + dictBufferTemp.size();
-                        if (curIndex > dictSize - 1) {
-                            break;
-                        }
-                        char q = dict.get(curIndex);
-                        char qq = tempBuffer.element();
-                        if (q == qq) {
-                            dictBufferTemp.add(tempBuffer.poll());
-                        }
-                        else {
-                            if (dictBufferTemp.size() > maxLength) {
-//                                System.out.println(dictBufferTemp.size());
-                                maxLength = dictBufferTemp.size();
-                                bestIndex = i;
-                            }
-                            break;
-                        }
-                    }
-                    if (tempBuffer.size() == 1) {
-                        maxLength = dictBufferTemp.size();
-                        bestIndex = i;
-                    }
-                }
-            }
-
-            dict.addAll(dictBuffer);
-            for (int i = 0; i < maxLength; i++) {
-                dict.add(buffer.poll());
-            }
-
-//            dictBuffer.add(buffer.poll());
-
-            result.add(new LZ77Code(bestIndex, maxLength, dict.getLast()));
         }
-
-
-        public static void lzStepWithOptimizationOLD(ArrayList<LZCode> result, ArrayList<Character> dict, Queue<Character> buffer, ArrayList<Character> dictBuffer, int dictSize, int bufferSize, char cur) {
-            int bestOffset = -1;
-            int bestLength = 0;
-
-            // Ищем самое длинное совпадение в словаре
-            for (int i = 0; i < dict.size(); i++) {
-                // Проверяем, совпадает ли текущий символ словаря с искомым символом
-                if (dict.get(i) == cur) {
-                    int length = 1;
-                    int dictIndex = i + 1;
-
-                    if (dictIndex >= dict.size()) {
-                        dictIndex = i;
-                    }
-
-                    // Создаем временную копию буфера для поиска совпадений
-                    Queue<Character> tempBuffer = new ArrayDeque<>(buffer);
-//                    tempBuffer.poll(); // Удаляем первый элемент, так как он уже соответствует cur
-
-                    // Ищем максимальное совпадение, начиная с текущей позиции в словаре
-
-                    char q = tempBuffer.peek();
-                    char qq = dict.get(dictIndex);
-
-                    while (dictIndex < dict.size() && !tempBuffer.isEmpty() &&
-                            qq == q &&
-                            length < bufferSize) {
-                        length++;
-                        dictIndex++;
-                        tempBuffer.poll();
-                    }
-
-                    // Обновляем лучшее совпадение, если текущее длиннее
-                    if (length > bestLength) {
-                        bestLength = length;
-                        bestOffset = i;
-                    }
-                }
-            }
-
-            // Обновляем dictBuffer, копируя символы из найденного совпадения
-            for (int i = 1; i < bestLength; i++) {
-                dictBuffer.add(buffer.poll());
-            }
-
-            // Добавляем следующий несовпадающий символ (если буфер не пуст)
-            if (!buffer.isEmpty()) {
-                dictBuffer.add(buffer.poll());
-            } else {
-                bestLength -= 1;
-            }
-
-
-            // Добавляем новые символы в словарь
-            dict.addAll(dictBuffer);
-
-            // Создаем и добавляем новый LZ77 код в результат
-            result.add(new LZ77Code(bestOffset, bestLength, dictBuffer.getLast()));
-        }
-    }
-
-    public static void main(String[] args) {
-        LZ77 lz77 = new LZ77();
-//        LZResult qq = lz77.code("красная краска",12,4);
-        LZResult qq = lz77.code("1112111112323212123333333",12,4);
-
-
-
-
-        System.out.println(LZ77Code.LZ77CodesArrayToString(qq.code()));
-        System.out.println(lz77.decode(qq));
-
-        LZResult q = lz77.code("1112111112323212123333333",12,4, true);
-//        LZResult q = lz77.code("красная краска",12,4, true);
-
-        System.out.println(LZ77Code.LZ77CodesArrayToString(q.code()));
-        System.out.println(lz77.decode(q));
-
     }
 }
